--- a/src/styles/View.css
+++ b/src/styles/View.css
@@ -1,10 +1,19 @@
 .view-component {
     display: flex;
-    justify-content: center;
-    margin: 0 auto; 
-    width: 100%; 
+    justify-content: center; 
+    align-items: center; 
     border: 2px solid blue;
     text-align: center;
     background-color: rgb(84, 81, 81);
+}
+
+.view-component table {
+    border-collapse: collapse; 
+    width: auto; 
+}
+
+.view-component td {
+    padding: 5px; 
+    text-align: center; 
 }
 
